syntax = "proto3";
package pb;
option go_package = "github.com/phatbb/userinfo";
import "userservice.proto";
import "google/api/annotations.proto";

message SignUpUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string passwordConfirm = 4;

}

message SignUpUserResponse {
    User user = 1;
    Wallet wallet =2;
    Error error =3;
}
message Error {
  string code = 1;
  string message = 2;
}

//signup

message SignInUserRequest {
    string email = 1;
    string password = 2;
}

message SignInUserResponse { 
    
    string status =1;
    string access_token =2;
    string refresh_token =3;

}

message GenericResponse {
    string status = 1;
    string message = 2;
}

message RefrehEmpty {

}
service AuthenService {
    rpc SignUpUser(SignUpUserRequest) returns (SignUpUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/create_user"
            body: "*"
        };
        // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        // 	description: "Use this API to create a new user";
        // 	summary: "Create new user";
        // };
    }
    rpc SignInUser(SignInUserRequest) returns (SignInUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/login_user"
            body: "*"
        };
        // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        // 	description: "Use this API to login user and get access token & refresh token";
        // 	summary: "Login user";
        // };

    }

    rpc RefreshToken(RefrehEmpty) returns (SignInUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/refresh"
            body: "*"
        };

    }

}

